[tool.poetry]
name = "onemodel"
version = "0.1.0"
description = "OneModel: an open-source SBML modeling tool"
authors = ["Fernando N. Santos-Navarro <fersann1@upv.es>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/sb2cl/onemodel"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[tool.poetry.dependencies]
python = "^3.8"
tatsu = "5.6.1"
PyQt5 = "*"
click = "*"
importlib-resources = "*"
python-libsbml = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
onemodel-cli = "onemodel.cli.cli:main"
onemodel-gui = "onemodel.gui.app:main"
